# torii

./: .gitignore  .vscodeignore  AGENTS.md  BRIEFING.md  CLAUDE.md  DESIGN.md  LICENSE  NOTES.md  README.md  package-lock.json  package.json  torii-0.3.1.vsix  torii-0.3.2.vsix  torii-0.4.0.vsix  torii-0.4.1.vsix  tsconfig.extension.json  tsconfig.json  vercel.json
irori/: README.md  index.html  package-lock.json  package.json  vite.config.ts
irori-web/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
irori-web/supabase/: config.toml
irori/src/: App.tsx  styles.css  types.ts
irori/src-tauri/: Cargo.toml  tauri.conf.json
irori/src-tauri/src/: db.rs  keychain.rs  main.rs  models.rs  openrouter.rs  search.rs
src/: constants.ts  extension.ts
src/backend/: agentEventPayload.test.ts  agentEventPayload.ts  agentLoop.ts  approvalManager.ts  commandGuard.ts  diffPreviewPolicy.test.ts  diffPreviewPolicy.ts  licenseManager.ts  ollamaSetup.ts  resetLocalData.test.ts  resetLocalData.ts  secretsManager.ts  server.ts  statusBar.ts  storage.ts  terminalBridge.ts  tools.ts  workspace.ts
src/webview/: agentEventBatch.test.ts  agentEventBatch.ts  initialDataGate.test.ts  initialDataGate.ts  openRouterModelPayload.test.ts  openRouterModelPayload.ts  provider.ts  safeShell.test.ts  safeShell.ts  taskPayload.test.ts  taskPayload.ts
webview/: index.html  package-lock.json  package.json  vite.config.ts
webview/src/: App.tsx  agentProgress.test.ts  agentProgress.ts  budget.d.ts  budget.js  budget.test.mjs  main.tsx  (+10 more)
(+26 files in other folders)
